@@ -12,6 +12,8 @@ Important compatibility changes not mentioned previously
 Features
 --------
 
+* Added documentation of post objects to list of template variables
+  (Issue #3003)
 * Support featured posts in bootblog4 (Issue #2964)
 * Add ``THEME_CONFIG`` setting that themes can use in any way they
   like
